--- a/web-service/package.json
+++ b/web-service/package.json
@@ -18,6 +18,7 @@
   "author": "AkhdanFirdaus",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0"
