--- a/web-service/package.json
+++ b/web-service/package.json
@@ -20,7 +20,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20",
+    "express-validator": "^6.14.2",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.25.0",
+    "nodemon": "^2.0.20"
   }
 }
